// SIMPS BPMN V1.2 — TAHAP 04: Review Jalur dan Penetapan Pembimbing
// Urutan BPMN: Sistem meneruskan pengajuan → dosen/penanggung jawab jalur mereview → Sekprodi final review → menetapkan P1/P2 → sistem mengaktifkan penetapan dan surat tugas
// Biru = CURRENT (sudah ada) | Oranye = PROPOSED (belum dimigrasikan)
// View ini hanya menampilkan kolom penggerak relasi/proses agar diagram terbaca.

Project SIMPS_BPMN_04 {
  database_type: 'PostgreSQL'
  Note: 'Review Jalur dan Penetapan Pembimbing'
}

Table Dosens [headercolor: #2F75B5] {
  id integer [pk, increment]
  kode_dosen varchar(255) [not null, unique]
  nama varchar(255) [not null]
  status_keaktifan varchar(30) [not null]
  account_is_active boolean [not null]
  kuota_bimbingan integer [not null]
  Note: 'CURRENT — dosen, pembimbing, penguji, dan penanggung jawab jalur'
}

Table SekretarisProdis [headercolor: #2F75B5] {
  id integer [pk, increment]
  nik varchar(9) [not null, unique]
  nama varchar(100) [not null]
  Note: 'CURRENT — sekretaris program studi'
}

Table Mahasiswas [headercolor: #2F75B5] {
  id integer [pk, increment]
  nim varchar(20) [not null, unique]
  nama varchar(100) [not null]
  dosen_pembimbing_akademik_id integer [ref: > Dosens.id]
  dosen_pembimbing_skripsi_id integer [ref: > Dosens.id]
  status_jalur_saat_ini varchar(40) [not null]
  pengajuan_aktif_id integer
  Note: 'CURRENT — mahasiswa dan pointer status proses aktif'
}

Table PendaftaranPenjalurans [headercolor: #2F75B5] {
  id integer [pk, increment]
  mahasiswa_id integer [not null, ref: > Mahasiswas.id]
  status varchar(30) [not null]
  reviewed_by_sekretaris_id integer [ref: > SekretarisProdis.id]
  reviewed_at timestamptz
  Note: 'CURRENT — pendaftaran yang direview'
}

Table Pengajuans [headercolor: #2F75B5] {
  id integer [pk, increment]
  mahasiswa_id integer [not null, ref: > Mahasiswas.id]
  pendaftaran_penjaluran_id integer [ref: > PendaftaranPenjalurans.id]
  prospective_supervisor_id integer [ref: > Dosens.id]
  status varchar(40) [not null]
  Note: 'CURRENT — pengajuan yang diteruskan ke reviewer'
}

Table RiwayatPersetujuans [headercolor: #2F75B5] {
  id integer [pk, increment]
  pengajuan_id integer [not null, ref: > Pengajuans.id]
  dosen_id integer [ref: > Dosens.id]
  sekretaris_prodi_id integer [ref: > SekretarisProdis.id]
  tipe_approval varchar(30) [not null]
  status varchar(20) [not null]
  tanggal_keputusan timestamptz [not null]
  Note: 'CURRENT — keputusan setiap reviewer'
}

Table RiwayatWorkflowPenjalurans [headercolor: #2F75B5] {
  id integer [pk, increment]
  pendaftaran_penjaluran_id integer [not null, ref: > PendaftaranPenjalurans.id]
  workflow_stage varchar(80) [not null]
  event_type varchar(80) [not null]
  actor_type varchar(40) [not null]
  occurred_at timestamptz [not null]
  Note: 'CURRENT — audit perpindahan tahap workflow'
}

Table SuratTugasPembimbings [headercolor: #2F75B5] {
  id integer [pk, increment]
  nomor_surat varchar(150) [unique]
  status varchar(20) [not null]
  issued_by_sekretaris_id integer [ref: > SekretarisProdis.id]
  Note: 'CURRENT — surat tugas pembimbing'
}

Table PenetapanPembimbings [headercolor: #2F75B5] {
  id integer [pk, increment]
  mahasiswa_id integer [not null, ref: > Mahasiswas.id]
  pendaftaran_penjaluran_id integer [ref: > PendaftaranPenjalurans.id]
  surat_tugas_id integer [ref: > SuratTugasPembimbings.id]
  previous_assignment_id integer [ref: > PenetapanPembimbings.id]
  created_by_sekretaris_id integer [ref: > SekretarisProdis.id]
  status varchar(20) [not null]
  effective_at timestamptz
  Note: 'CURRENT — header penetapan dan histori pergantian'
}

Table PenetapanPembimbingDosens [headercolor: #2F75B5] {
  id integer [pk, increment]
  penetapan_pembimbing_id integer [not null, ref: > PenetapanPembimbings.id]
  dosen_id integer [not null, ref: > Dosens.id]
  urutan integer [not null]
  peran varchar(20) [not null]
  status varchar(20) [not null]
  Note: 'CURRENT — anggota P1/P2 dalam penetapan'
}

Table AssignmentActivationAttempts [headercolor: #2F75B5] {
  id integer [pk, increment]
  penetapan_pembimbing_id integer [not null, unique, ref: - PenetapanPembimbings.id]
  status varchar(30) [not null]
  attempt_count integer [not null]
  activated_at timestamptz
  Note: 'CURRENT — reliability aktivasi penetapan'
}

